fix(bot) remove bot parts, make auto-afk optional

--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-	"nick": "",
+	"nick": "K",
 	"room": "xkcd",
 	"dataset": "dataset.txt",
 	"human": 1,
 	"override": true,
 	"prompt": ">",
 	"afk": {
-		"delay": 600
+		"delay": 0,
+		"enabled": false
 	},
 	"visuals": {
 		"ID": 4
